# gxs

./: Makefile  README.md  go.mod  meson.build
.github/workflows/: main.yml
cmd/: main.go  template.html
examples/: gxs.gxs  helloworld.gxs  include.one  include.two  includes.gxs  lines.gxs  logo.gxs  readme.gxs
expected/: gxs-small.gxs.ascii  gxs-small.gxs.html  gxs.gxs.ascii  gxs.gxs.html  lines.gxs.ascii  lines.gxs.html  logo.gxs.ascii  logo.gxs.html  offsets.gxs.ascii  offsets.gxs.html  readme.gxs.ascii  readme.gxs.html
internal/: errors.go  floss.go  options.go  options_test.go  parser.go  parser_test.go  template.go  template.html  template_test.go
testcases/: lines.gxs
tests/: Makefile
tests/inputs/: gxs-small.gxs  includes.gxs  offsets.gxs  readme.gxs
tests/outputs/: gxs-small.gxs.html  gxs.gxs.ascii  gxs.gxs.html  helloworld.gxs.ascii  helloworld.gxs.html  logo.gxs.ascii  logo.gxs.html  nodelimiter.ascii  offsets.gxs.ascii  offsets.gxs.html  readme.gxs.ascii  readme.gxs.html
